--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap');
 :root {
     --primary: #0d6efd;
+    --primary-two: #004ecb;
     --secondary: #e10022;
     --dark: #21252f;
     --white: #ffffff;
     --white-60: #e2e2e2;
+    --border: #c3c3c3cc;
     --body: #888;
     --box-shadow: 0 8px 22px rgba(0, 0, 0, 0.1);
 }
@@ -19,6 +21,7 @@ body {
     font-family: Sora, "sans-serif";
     line-height: 1.7;
     color: var(--body);
+    background-color: rgba(221, 221, 221, 0.549);
 }
 
 section {
@@ -47,6 +50,7 @@ a {
     position: fixed;
     width: 100%;
     border-bottom: 1px solid rgba(126, 126, 126, 0.3);
+    z-index: 999;
 }
 
 .navbar .logo {
@@ -97,11 +101,12 @@ a {
 }
 
 .inicial-home .container-content {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .container-content p {
     font-size: 1.1rem;
+    color: #888;
 }
 
 .inicial-home .btn-secondary {
@@ -121,9 +126,13 @@ a {
 }
 
 section.secundaria-home {
-    margin: auto;
-    max-width: 1150px;
-    min-width: 320px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-image: linear-gradient(to top, var(--white) 50%, rgb(209, 209, 209));
+}
+
+section.secundaria-home h2 {
+    font-size: 2.5rem;
 }
 
 .card-effect {
@@ -139,18 +148,61 @@ section.secundaria-home {
 }
 
 .iconbox {
-    width: 110px;
-    height: 110px;
+    width: 54px;
+    height: 54px;
     display: flex;
     align-items: center;
-    border-radius: 100%;
-}
-
-.iconbox>img {
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    background-color: var(--primary);
+    color: var(--white);
+    font-size: 32px;
+    border-radius: 100px;
 }
 
 .secundaria-content {
     font-size: 1.2rem;
+    color: rgba(0, 0, 0, 0.923);
+    font-weight: 500;
+}
+
+.service {
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    border-radius: 15px;
+    border: 1px solid var(--border);
+    cursor: default;
+}
+
+.service::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    background-color: var(--primary);
+    z-index: -1;
+    opacity: 0;
+    transition: all .4s ease;
+}
+
+.service:hover .iconbox {
+    background-color: var(--white);
+    color: var(--primary);
+}
+
+.service p {
+    color: rgba(0, 0, 0, 0.923);
+    font-weight: 500;
+}
+
+.service:hover h5,
+.service:hover p {
+    color: var(--white);
+}
+
+.service:hover::after {
+    opacity: 1;
+    top: 0;
 }
