--- a/css/style.css
+++ b/css/style.css
@@ -81,27 +81,10 @@ a {
 }
 
 .home {
-    background-image: url(../img/jpg/bg-home.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/jpg/bg-home.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    position: relative;
-    z-index: 2;
-}
-
-.inicial-home::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(26, 26, 29, 0.8);
-    z-index: -1;
-}
-
-.inicial-home .container-content {
-    margin-top: 100px;
 }
 
 .container-content p {
@@ -119,6 +102,15 @@ a {
     transition: .3s;
 }
 
+@media(max-height: 470px) {
+    .home {
+        height: 500px;
+    }
+    .inicial-home h1 {
+        margin-top: 150px;
+    }
+}
+
 .inicial-home .btn-secondary:hover {
     background-color: var(--white);
     border: var(--white);
@@ -128,7 +120,7 @@ a {
 section.secundaria-home {
     padding-top: 120px;
     padding-bottom: 120px;
-    background-image: linear-gradient(to top, var(--white) 50%, rgb(209, 209, 209));
+    background-image: linear-gradient(to top, var(--white) 50%, rgb(184, 184, 184));
 }
 
 section.secundaria-home h2 {
@@ -170,8 +162,8 @@ section.secundaria-home h2 {
     z-index: 1;
     overflow: hidden;
     border-radius: 15px;
-    border: 1px solid var(--border);
     cursor: default;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
 }
 
 .service::after {
@@ -194,6 +186,7 @@ section.secundaria-home h2 {
 
 .service p {
     color: rgba(0, 0, 0, 0.923);
+    font-size: .9rem;
     font-weight: 500;
 }
 
