--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,21 @@ a {
     text-decoration: none;
 }
 
+.container {
+    text-align: center;
+}
+
+.glass-effect {
+    background-color: #ffffff3f;
+    backdrop-filter: blur(55px);
+    height: fit-content;
+    padding: 30px 30px;
+    border: 2px solid rgba(108, 108, 108, 0.3);
+    border-radius: 15px;
+}
+
 .navbar {
-    background-color: rgba(35, 35, 35, 0.227);
+    background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(50px);
     position: fixed;
     width: 100%;
@@ -85,6 +98,7 @@ a {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    height: 625px;
 }
 
 .container-content p {
@@ -92,23 +106,33 @@ a {
     color: #888;
 }
 
-.inicial-home .btn-secondary {
-    background-color: var(--secondary);
-    border: var(--secondary);
-    width: 40%;
-    font-size: 1rem;
-    border-radius: 8px;
-    box-shadow: 5px 5px 8px rgba(99, 99, 99, 0.3);
-    transition: .3s;
+@media(max-width: 425px) {
+    .inicial-home h1 {
+        width: 67%;
+        font-size: 1.7rem;
+        margin-top: 90px !important;
+        margin: auto;
+    }
 }
 
 @media(max-height: 470px) {
     .home {
-        height: 500px;
+        height: 600px;
     }
     .inicial-home h1 {
-        margin-top: 150px;
+        margin-top: 300px !important;
     }
+}
+
+.inicial-home .btn-secondary {
+    background-color: var(--secondary);
+    border: var(--secondary);
+    width: 260px;
+    font-size: 1.1rem;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 8px rgba(99, 99, 99, 0.3);
+    transition: .3s;
 }
 
 .inicial-home .btn-secondary:hover {
@@ -120,7 +144,7 @@ a {
 section.secundaria-home {
     padding-top: 120px;
     padding-bottom: 120px;
-    background-image: linear-gradient(to top, var(--white) 50%, rgb(184, 184, 184));
+    background-image: linear-gradient(to top, var(--white-60) 50%, rgb(170, 170, 170));
 }
 
 section.secundaria-home h2 {
@@ -198,4 +222,138 @@ section.secundaria-home h2 {
 .service:hover::after {
     opacity: 1;
     top: 0;
+}
+
+.cta {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background: linear-gradient(to left, rgba(48, 48, 48, 0.4) .1%, rgba(0, 0, 0, 0.9)), url(../img/jpg/fundo-cta.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    border-top: 3px solid rgb(225, 0, 34);
+    border-bottom: 3px solid rgb(225, 0, 34);
+}
+
+.cta h2 {
+    font-size: 2.2rem;
+    text-align: start;
+}
+
+.cta p {
+    font-size: 1.1rem;
+    font-weight: 500;
+    text-align: start;
+}
+
+.cta .btn-cta {
+    background-color: var(--secondary);
+    color: var(--white);
+}
+
+.cta .btn-cta:hover {
+    background-color: var(--white);
+    color: var(--secondary);
+}
+
+.produtos-home .secundaria-content {
+    width: 70%;
+    font-weight: 500;
+    margin: auto;
+}
+
+.produtos-home {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    background-image: linear-gradient(to top, var(--white-60) 50%, rgb(170, 170, 170));
+}
+
+.produtos-home::before {
+    content: '';
+    width: 350px;
+    height: 350px;
+    top: -20px;
+    left: -120px;
+    position: absolute;
+    background-color: #ff0000;
+    border-radius: 100%;
+}
+
+.produtos-home::after {
+    content: '';
+    width: 200px;
+    height: 200px;
+    bottom: -60px;
+    right: -55px;
+    position: absolute;
+    background-color: #004ecb;
+    border-radius: 100%;
+    z-index: 0;
+}
+
+.project-wrapper {
+    z-index: 2;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: #004ecb;
+}
+
+.project-wrapper::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    opacity: 0;
+    transition: all .4s ease;
+}
+
+.project-wrapper:hover::after {
+    opacity: 1;
+    top: 0;
+}
+
+.project-wrapper img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: all .8s ease;
+}
+
+.project-wrapper i {
+    font-size: 35px;
+    width: 22%;
+    z-index: 2;
+}
+
+.project-wrapper i:hover {
+    background-color: var(--white);
+    color: var(--secondary);
+    border: var(--white);
+}
+
+.project-wrapper .btn {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .8s ease;
+}
+
+.project-wrapper:hover .btn {
+    top: 50%;
+    opacity: 1;
+}
+
+.project-wrapper:hover img {
+    transform: scale(1.2);
+    filter: blur(2px);
+    background: #0d6efd;
 }
