--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,9 @@ a {
 }
 
 .glass-effect {
-    background-color: #ffffff3f;
-    backdrop-filter: blur(55px);
+    margin: auto;
+    background-color: rgba(235, 225, 225, 0.253);
+    backdrop-filter: blur(25px);
     height: fit-content;
     padding: 30px 30px;
     border: 2px solid rgba(108, 108, 108, 0.3);
@@ -71,6 +72,16 @@ a {
     height: 50px;
 }
 
+.navbar button {
+    background-color: transparent;
+    border: none;
+}
+
+.navbar button i {
+    color: var(--white);
+    font-size: 40px;
+}
+
 .navbar .nav-link {
     font-size: 16px;
     font-weight: 600;
@@ -81,7 +92,7 @@ a {
     background-color: var(--secondary);
     border: var(--secondary);
     border-radius: 8px;
-    width: 15%;
+    width: 120px;
     font-weight: 400;
     transition: .2s ease;
 }
@@ -93,35 +104,16 @@ a {
     font-weight: 500;
 }
 
-.home {
+.inicial-home {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/jpg/bg-home.jpg);
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
     height: 625px;
 }
 
 .container-content p {
     font-size: 1.1rem;
     color: #888;
-}
-
-@media(max-width: 425px) {
-    .inicial-home h1 {
-        width: 67%;
-        font-size: 1.7rem;
-        margin-top: 90px !important;
-        margin: auto;
-    }
-}
-
-@media(max-height: 470px) {
-    .home {
-        height: 600px;
-    }
-    .inicial-home h1 {
-        margin-top: 300px !important;
-    }
 }
 
 .inicial-home .btn-secondary {
@@ -230,7 +222,6 @@ section.secundaria-home h2 {
     background: linear-gradient(to left, rgba(48, 48, 48, 0.4) .1%, rgba(0, 0, 0, 0.9)), url(../img/jpg/fundo-cta.jpg);
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
     border-top: 3px solid rgb(225, 0, 34);
     border-bottom: 3px solid rgb(225, 0, 34);
 }
@@ -257,9 +248,9 @@ section.secundaria-home h2 {
 }
 
 .produtos-home .secundaria-content {
-    width: 70%;
-    font-weight: 500;
+    width: 90%;
     margin: auto;
+    font-weight: 500;
 }
 
 .produtos-home {
@@ -274,23 +265,15 @@ section.secundaria-home h2 {
     content: '';
     width: 350px;
     height: 350px;
-    top: -20px;
+    top: -30px;
     left: -120px;
     position: absolute;
     background-color: #ff0000;
     border-radius: 100%;
 }
 
-.produtos-home::after {
-    content: '';
-    width: 200px;
-    height: 200px;
-    bottom: -60px;
-    right: -55px;
-    position: absolute;
-    background-color: #004ecb;
-    border-radius: 100%;
-    z-index: 0;
+.produtos-home h2 {
+    font-size: 2.2rem;
 }
 
 .project-wrapper {
@@ -298,7 +281,6 @@ section.secundaria-home h2 {
     height: 100%;
     position: relative;
     overflow: hidden;
-    background-color: #004ecb;
 }
 
 .project-wrapper::after {
@@ -355,5 +337,4 @@ section.secundaria-home h2 {
 .project-wrapper:hover img {
     transform: scale(1.2);
     filter: blur(2px);
-    background: #0d6efd;
 }
