--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ a {
         margin-top: 30px;
     }
     .navbar .btn-secondary {
+        margin-top: 8px;
         margin-bottom: 55px;
     }
 }
