--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@
         font-weight: 700;
     }
     
+    .fsc-p {
+        font-size: 18px;
+        color: rgba(0, 0, 0, 0.923);
+        font-weight: 500;
+    }
+    
     a {
         text-decoration: none;
     }
@@ -108,11 +114,6 @@
         height: 640px;
     }
     
-    .container-content p {
-        font-size: 1.1rem;
-        color: #888;
-    }
-    
     .inicial-home .btn-secondary {
         background-color: var(--secondary);
         border: var(--secondary);
@@ -133,7 +134,7 @@
     section.secundaria-home {
         padding-top: 120px;
         padding-bottom: 120px;
-        background-image: linear-gradient(to top, var(--white-60) 50%, rgb(170, 170, 170));
+        background-image: linear-gradient(to top, var(--white-60) 50%, rgb(146, 146, 146));
     }
     
     section.secundaria-home h2 {
@@ -162,12 +163,6 @@
         color: var(--white);
         font-size: 32px;
         border-radius: 100px;
-    }
-    
-    .secundaria-content {
-        font-size: 1.15rem;
-        color: rgba(0, 0, 0, 0.923);
-        font-weight: 500;
     }
     
     .service {
@@ -249,7 +244,7 @@
         height: 100%;
         position: relative;
         overflow: hidden;
-        background-image: linear-gradient(to top, var(--white-60) 50%, rgb(170, 170, 170));
+        background-image: linear-gradient(to top, var(--white-60) 50%, rgb(146, 146, 146));
     }
     
     .produtos-home::before {
@@ -265,6 +260,12 @@
     
     .produtos-home h2 {
         font-size: 2.2rem;
+    }
+    
+    .produtos-home p.fsc-p {
+        border: 1px solid red;
+        margin: auto;
+        width: 80%;
     }
     
     .project-wrapper {
@@ -341,9 +342,15 @@
         .navbar .btn-secondary {
             margin-top: 8px;
             margin-bottom: 55px;
+            font-weight: 600;
+            background-color: transparent;
+        }
+        .navbar .btn-secondary:hover {
+            background-color: transparent;
+            color: var(--white);
         }
         .inicial-home {
-            height: 740px;
+            height: 700px;
         }
         .cta {
             padding-top: 70px;
