--- a/css/style.css
+++ b/css/style.css
@@ -434,4 +434,7 @@
             top: -30px;
             left: -120px;
         }
+        .produtos-home p.fsc-p {
+            width: 100%;
+        }
     }
