--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
         --primary-two: #004ecb;
         --secondary: #e10022;
         --dark: #21252f;
+        --dark-nav: #212529;
         --white: #ffffff;
         --white-60: #e2e2e2;
         --border: #c3c3c3cc;
@@ -280,10 +281,6 @@
         opacity: 0;
     }
     
-    .cta-txt {
-        animation: fadeInLeft 2s ease-in-out;
-    }
-    
     .cta .btn-cta {
         background-color: var(--secondary);
         color: var(--white);
@@ -389,13 +386,36 @@
         filter: blur(2px);
     }
     
+    .cta2 {
+        height: 550px;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        background: linear-gradient(to left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/board-1709188_1280.png);
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+    }
+    
+    .cta2 h2 {
+        font-size: 2.2rem;
+        text-align: start;
+    }
+    
+    .cta2 p {
+        font-size: 1.1rem;
+        font-weight: 500;
+        text-align: start;
+    }
+    
     @media (max-width:991px) {
         .navbar-collapse {
             height: 240px;
         }
         .navbar {
             margin-top: 0;
-            background-color: var(--dark);
+            background-color: var(--dark-nav);
             border-bottom: 1px solid var(--body);
         }
         .navbar .logo {
