--- a/css/style.css
+++ b/css/style.css
@@ -387,15 +387,16 @@
     }
     
     .cta2 {
-        height: 550px;
-        padding-top: 70px;
-        padding-bottom: 70px;
-        background: linear-gradient(to left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/board-1709188_1280.png);
+        height: 600px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        background: linear-gradient(to top, #212529, #e10022);
         background-position: center;
-        background-attachment: fixed;
         background-size: cover;
         display: flex;
         align-items: center;
+        border-top: 1px solid rgb(136, 136, 136);
+        border-bottom: 1px solid rgb(136, 136, 136);
     }
     
     .cta2 h2 {
