--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,7 +4,7 @@
     --primary-two: #004ecb;
     --secondary: #e10022;
     --dark: #21252f;
-    --green-ligth: #f2fffd;
+    --green-ligth: #deeaea;
     --dark-nav: #11252e;
     --white: #ffffff;
     --white-60: #e2e2e2;
@@ -43,6 +43,11 @@ h6,
     font-weight: 700;
 }
 
+h2 {
+    font-size: 50px;
+    color: var(--primary);
+}
+
 h1 {
     color: var(--primary);
 }
@@ -59,16 +64,6 @@ a {
 
 .container {
     text-align: center;
-}
-
-.glass-effect {
-    margin: auto;
-    background-color: rgba(235, 225, 225, 0.253);
-    backdrop-filter: blur(25px);
-    height: fit-content;
-    padding: 30px 30px;
-    border: 2px solid rgba(108, 108, 108, 0.3);
-    border-radius: 15px;
 }
 
 .navbar {
@@ -110,7 +105,7 @@ a {
 }
 
 .navbar .nav-link {
-    font-size: 18px;
+    font-size: 19px;
     height: 38px;
     font-weight: 600;
     color: var(--primary);
@@ -148,13 +143,12 @@ a {
     background: linear-gradient(rgb(242, 255, 253)2%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7), rgb(0, 0, 0)), url(../img/jpg/bg-home.jpg);
     background-position: center;
     background-size: cover;
-    height: 640px;
+    height: 100vh;
 }
 
 .p-top {
     padding: 20px;
     font-size: 18px;
-    text-align: center;
 }
 
 .h1-top {
@@ -205,11 +199,7 @@ a {
 
 .secundaria-home {
     background: linear-gradient(to bottom, var(--white-60), var(--green-ligth));
-    height: 700px;
-}
-
-.secundaria-home h2 {
-    font-size: 50px;
+    height: fit-content;
 }
 
 .secundaria-home p {
@@ -222,8 +212,100 @@ a {
 }
 
 .secundaria-home h3 {
-    font-size: 28px;
+    font-size: 32px;
     font-weight: 100;
+    color: var(--primary);
+}
+
+.secundaria-home .service {
+    padding: 44px 24px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.211);
+    border-radius: 10px;
+}
+
+.secundaria-home .icon-box {
+    width: 100%;
+    height: 150px;
+    font-size: 40px;
+    margin: 0 auto;
+    color: var(--primary);
+}
+
+.star1 {
+    font-size: 35px;
+}
+
+.star2 {
+    font-size: 40px;
+}
+
+.star3 {
+    font-size: 50px;
+}
+
+.star4 {
+    font-size: 55px;
+}
+
+.star5 {
+    font-size: 70px;
+}
+
+.bi-people-fill {
+    font-size: 90px;
+}
+
+.bi-gear {
+    margin-left: -10px;
+}
+
+.bi-person-check-fill {
+    font-size: 90px;
+}
+
+.secundaria-home .service p {
+    width: fit-content;
+    font-size: 17px;
+    text-align: center;
+}
+
+.secundaria-produtos {
+    border-top: 2px solid #11252e0f;
+    background: linear-gradient(to top, var(--white-60), var(--green-ligth));
+    height: fit-content;
+}
+
+.secundaria-produtos .sub-title-produtos {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    color: var(--dark);
+}
+
+.btn-danger:hover {
+    background-color: var(--white);
+    border: 1px solid var(--white);
+    color: var(--secondary);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    border-right: 2px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.356);
+}
+
+.produtos .display-6 {
+    font-size: 45px;
+    padding: 20px;
+    font-weight: 700;
+    color: var(--dark);
+}
+
+.produtos p {
+    font-size: 20px;
+    color: var(--dark);
+}
+
+.container-carrosel {
+    width: 550px;
 }
 
 
@@ -267,6 +349,20 @@ a {
 .footer {
     border-top: 5px solid #0b1a20;
     background-color: #11252e;
+}
+
+.div-footer-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    font-size: 17px;
+    font-weight: 600;
+    background-color: #0b1a20;
+}
+
+.div-footer-bottom>span {
+    font-size: 17px;
 }
 
 @media (max-width:992px) {
@@ -341,5 +437,18 @@ a {
         margin: 0 auto;
         width: auto;
         padding: 8px;
+    }
+    .container-carrosel {
+        width: 460px;
+        margin-top: 15px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .div-footer-bottom {
+        font-size: 14px;
+    }
+    .div-footer-bottom>span {
+        font-size: 14px;
     }
 }
