--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
 @media (max-width:992px) {
     .navbar-collapse {
-        height: 280px;
+        height: 370px;
     }
     .navbar {
         margin-top: 0;
@@ -15,7 +15,8 @@
         margin-top: 30px;
     }
     .navbar .nav-link {
-        font-size: 18px;
+        font-size: 20px;
+        margin-bottom: 25px;
         color: var(--primary);
         border-bottom: 0px solid transparent;
     }
