--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -50,7 +50,7 @@
         height: 700px;
     }
     .h1-top {
-        font-size: 42px;
+        font-size: 35px;
     }
     .secundaria-home .service:hover {
         transform: scale(1);
@@ -100,8 +100,14 @@
     }
 }
 
+@media (max-width: 420px) {
+    .h1-top {
+        font-size: 1.9rem;
+    }
+}
+
 @media (max-width: 330px) {
     .h1-top {
-        font-size: 40px;
+        font-size: 2.3rem;
     }
 }
