--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -242,6 +242,86 @@
 }
 
 .inicial-servicos {
-    background-color: aqua;
+    background: linear-gradient(to right, rgba(48, 48, 48, 0.486) .1%, rgb(56, 64, 83)), url(../img/png/circuitos-flexiveis.png);
     height: 450px;
+    width: 100%;
+    background-size: auto;
+    background-repeat: no-repeat;
+}
+
+#section-servicos .container-servicos {
+    background-color: aqua;
+}
+
+#section-servicos .servicos-content-img {
+    width: 550px;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 -20px;
+    border-radius: 25px;
+    position: relative;
+    cursor: default;
+}
+
+#section-servicos .servicos-content-img p {
+    color: var(--secondary);
+    left: -36%;
+    top: 40%;
+    font-size: 20px;
+    font-weight: 600;
+    background: linear-gradient(to right, rgb(255, 255, 255) .2%, rgba(255, 255, 255, 0.603));
+    opacity: 0;
+    position: absolute;
+    transition: all .5s ease;
+    z-index: 100;
+}
+
+#section-servicos .servicos-content-img:hover p {
+    opacity: 1;
+}
+
+#section-servicos .servicos-content-img img {
+    width: 100%;
+    height: 100%;
+    transition: all .5s ease;
+}
+
+#section-servicos .servicos-content-img:hover img {
+    transform: scale(1.3);
+    filter: blur(2px);
+}
+
+#section-servicos .servicos-content {
+    border: 2px solid var(--dark);
+    width: 400px;
+    height: 470px;
+    margin: 0 auto;
+}
+
+#section-servicos .servicos-content h3 {
+    font-size: 40px;
+    padding: 0 55px;
+    text-align: start;
+    margin-top: 25px;
+    color: var(--secondary);
+}
+
+#section-servicos .servicos-content hr {
+    width: 45%;
+    height: 5px;
+    color: var(--secondary);
+    margin: 0 60px;
+}
+
+#section-servicos .servicos-content p {
+    width: 100%;
+    text-align: start;
+}
+
+#section-servicos .servicos-content .topicos {
+    text-align: start;
+    font-weight: 600;
+    width: 190px;
+    color: var(--primary);
+    margin: 0 8%;
 }
