--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -93,6 +93,25 @@
     .email {
         font-size: 13.5px;
     }
+    .inicial-servicos {
+        height: 300px;
+        background-repeat: no-repeat;
+        background-size: auto;
+    }
+    #section-servicos .servicos-content-img {
+        margin: 60px 70px;
+    }
+    #section-servicos .servicos-content-img p {
+        left: 6%;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 766px) {
+    #section-servicos .servicos-content-img {
+        margin: 60px -20px;
+        background-color: red;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -113,14 +132,38 @@
         align-items: center;
         width: 100%;
         height: 50px;
-        border: 1px solid rgb(0, 42, 255);
     }
     .email {
         font-size: 21px;
     }
+    .inicial-servicos {
+        height: 300px;
+        background-repeat: no-repeat;
+        background-size: auto;
+    }
+    .inicial-servicos h2 {
+        margin-top: 60px;
+    }
+    #section-servicos .servicos-content-img {
+        width: 400px;
+        height: 300px;
+        margin: 60px 3px;
+        background-color: red;
+    }
+    #section-servicos .servicos-content-img p {
+        left: 1%;
+        font-size: 16px;
+        opacity: 1;
+    }
 }
 
 @media (max-width: 420px) {
+    #section-servicos .servicos-content-img {
+        width: 350px;
+        height: 250px;
+        margin: 60px -3px;
+        background-color: red;
+    }
     .h1-top {
         font-size: 1.9rem;
     }
@@ -129,5 +172,11 @@
 @media (max-width: 330px) {
     .h1-top {
         font-size: 2.3rem;
+    }
+    #section-servicos .servicos-content-img {
+        width: 300px;
+        height: 250px;
+        margin: 60px 1px;
+        background-color: red;
     }
 }
