--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -49,7 +49,9 @@
     .inicial-home {
         height: 700px;
     }
-    .h1-top {}
+    .h1-top {
+        font-size: 35px;
+    }
     .secundaria-home .service:hover {
         transform: scale(1);
     }
@@ -139,13 +141,19 @@
 }
 
 @media (max-width: 420px) {
-    .h1-top {}
+    .h1-top {
+        font-size: 1.9rem;
+    }
 }
 
 @media (max-width: 378px) {
-    .h1-top {}
+    .h1-top {
+        font-size: 2.3rem;
+    }
 }
 
 @media (max-width: 330px) {
-    .h1-top {}
+    .h1-top {
+        font-size: 2.3rem;
+    }
 }
