--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -106,6 +106,12 @@
     #section-servicos .servicos-content-img {
         margin-top: 80px;
     }
+    .container-content-exp:nth-child(2) {
+        margin-top: 35px;
+    }
+    .container-content-exp:nth-child(3) {
+        margin-bottom: 35px;
+    }
 }
 
 @media (max-width: 575.98px) {
