--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -329,6 +329,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: fit-content;
+    background-attachment: fixed;
 }
 
 .container-content-exp {
