--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -32,6 +32,10 @@ h2 {
     color: var(--primary);
 }
 
+.shdw {
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.8);
+}
+
 h1 {
     color: var(--primary);
 }
@@ -88,6 +92,10 @@ a {
     font-size: 45px;
 }
 
+.navbar .nav-item {
+    height: 38px;
+}
+
 .navbar .nav-link {
     font-size: 19px;
     height: 38px;
@@ -97,7 +105,12 @@ a {
 }
 
 .navbar .nav-link:hover {
-    color: var(--primary-two);
+    border-bottom: 4px solid var(--primary-two);
+}
+
+.active {
+    height: 38px;
+    font-weight: 600;
     border-bottom: 4px solid var(--primary-two);
 }
 
