--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -138,18 +138,17 @@ a {
 .footer {
     border-top: 5px solid #0b1a20;
     background-color: #11252e;
+    font-size: 14px;
+    padding: 15px;
 }
 
-.div-footer-bottom {
+.footer .div-footer-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 50px;
-    font-size: 17px;
+    font-size: 14px;
     font-weight: 600;
+    text-align: left;
     background-color: #0b1a20;
-}
-
-.div-footer-bottom>span {
-    font-size: 17px;
 }
