--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -360,7 +360,14 @@
 }
 
 .bg-primary {
+    margin-top: -55px;
     font-size: 40px;
     background-color: rgb(0, 21, 88)!important;
     border-radius: 50px;
+}
+
+.text-dark a {
+    margin-right: 500px;
+    margin-top: 10px;
+    width: 25%;
 }
