--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width:992px) {
+@media (max-width: 992px) {
     .navbar-collapse {
         height: 370px;
     }
@@ -118,6 +118,13 @@
     .inicial-produtos h2 {
         margin-top: 60px;
     }
+    .img-produtos-center {
+        margin: 0 auto!important;
+    }
+    .text-dark a {
+        margin: 0 auto;
+        margin-top: 10px;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -126,19 +133,34 @@
         width: 500px;
         margin-top: 15px;
     }
-    .produtos-content {
-        width: 400px;
+    .container-content-produtos {
+        margin-top: -120px;
+        margin-bottom: 20px;
     }
-    .produtos-content img {
-        width: 100%!important;
+    .produtos-content {
+        width: 100%;
+        padding-left: 17px;
+    }
+    .bg-primary {
+        font-size: 28px;
+        width: 100%;
+        margin-left: 2%;
+        background-color: rgb(0, 21, 88)!important;
+        border-radius: 50px;
+    }
+    .text-dark a {
+        margin-right: 500px;
+        margin-top: 10px;
+        width: 45%;
+    }
+    .container-servicos .img-fluid {
+        margin: 0 auto;
     }
     .footer .bi {
         font-size: 25px;
-        color: rgb(255, 0, 144);
     }
     .footer span {
         font-size: 13px;
-        color: rgb(255, 242, 0);
     }
     .div-footer-bottom {
         font-size: 14px;
