--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -149,14 +149,22 @@
         background-color: rgb(0, 21, 88)!important;
         border-radius: 50px;
     }
+    .container-content-produtos p {
+        margin-left: 4%;
+    }
+    .div-span-produtos span {
+        margin-left: 0px;
+        text-align: center;
+    }
     .text-dark a {
-        margin-right: 500px;
         margin-top: 10px;
-        margin-bottom: 10px;
         width: 45%;
     }
     .container-servicos .img-fluid {
         margin: 0 auto;
+    }
+    .footer .container-p-sobre .w-75 {
+        width: 100%!important;
     }
     .footer .bi {
         font-size: 25px;
