--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -80,12 +80,8 @@
     background-color: rgba(255, 255, 255, 0.211);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    transition: all .5s ease;
+    transition: all .2s ease;
     cursor: default;
-}
-
-.secundaria-home .service:hover {
-    transform: scale(1.05);
 }
 
 .secundaria-home .div-cards {
@@ -374,4 +370,59 @@
     margin-right: 500px;
     margin-top: 10px;
     width: 25%;
+}
+
+
+/****SOBRE*****/
+
+.inicial-sobre {
+    background: linear-gradient(to right, rgba(48, 48, 48, 0.2) .1%, rgba(0, 0, 0, 0.829)), url(../img/jpg/bg-sobre.jpg);
+    height: 450px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    background-attachment: fixed;
+}
+
+.container-top-sobre p {
+    font-size: 19px;
+}
+
+.secundaria-sobre {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.3) .1%, rgba(0, 0, 0, 0.8)), url(../img/jpg/bg-secundaria-sobre.jpg);
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    background-attachment: fixed;
+}
+
+.content-pilares {
+    padding-top: 45px;
+    padding-bottom: 45px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(40px);
+    border: 1px solid rgba(148, 148, 148, 0.401);
+}
+
+.content-pilares p {
+    margin: 20px auto;
+    font-size: 19px;
+}
+
+.content-pilares p:nth-child(2) {
+    margin-left: -25px!important;
+}
+
+.service.sobre-cards {
+    padding: 44px 24px;
+    height: 480px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.211);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    cursor: default;
 }
